# rice-rail

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  go.mod
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
branding/: colors.md  paths.json
cmd/rice-rail/: main.go
internal/adapters/: agent_adapters_test.go  agent_helpers.go  aider.go  ast_grep.go  biome.go  claude_code.go  codex_adapter.go  comby.go  copilot.go  custom.go  custom_test.go  dependency_cruiser.go  eslint.go  gemini.go  go_test_runner.go  go_vet.go  gofmt.go  golangci_lint.go  interfaces.go  jest_vitest.go  mcp.go  ollama.go  opencode.go  prettier.go  pyright.go  pytest.go  qwen.go  registry.go  registry_test.go  ruff.go  rule_spec.go  rust.go  semgrep.go  tsc.go
internal/baseline/: runner.go  runner_test.go
internal/builder/: agent_skills.go  agent_skills_test.go  builder.go  builder_test.go  ci.go  ci_test.go  docs.go  docs_test.go  templates.go
internal/cli/: add_commands.go  banner.go  baseline.go  build_toolkit.go  check.go  cycle.go  discover_tools.go  doctor.go  explain.go  fix.go  init.go  init_integration_test.go  regenerate.go  report.go  root.go  upgrade_toolkit.go  version.go
internal/company/: pack.go  pack_test.go
testdata/fixtures/python-lib/: conftest.py  pyproject.toml
testdata/fixtures/python-lib/.github/workflows/: ci.yml
testdata/fixtures/python-lib/src/mylib/: __init__.py  core.py
testdata/fixtures/python-lib/tests/: test_core.py
(+50 files in other folders)
